# AdvanceML_FederatedLearning

./: .gitignore  README.md  aml.py  centralized_shakespeare.ipynb  centralized_shakespeare.py  centralized_shakespeare_final.ipynb  centralized_shakespeare_old.py  centralized_training.py  detect_cuda.py  federated_learning.py  federated_shakespeare.ipynb  federated_shakespeare.py  federated_shakespeare_final.ipynb  federated_shakespeare_old.py  fl.py  generate_data_shakespeare.py  ipynb2py.py  lenet.ipynb  lenet.py  lenet_utils.py  lstm.py  lstm2.py  personalization.ipynb  project.py  pyproject.toml  results.py  test.py  utils.py
processed_data/Centralized_lr0.0001_wd0.0001/: model_epoch_0_params_LR0.0001_WD0.0001.json  model_epoch_19_params_LR0.0001_WD0.0001.json
processed_data/Centralized_lr0.0001_wd0.001/: model_epoch_0_params_LR0.0001_WD0.001.json  model_epoch_19_params_LR0.0001_WD0.001.json
processed_data/Centralized_lr0.0001_wd1e-05/: model_epoch_0_params_LR0.0001_WD1e-05.json  model_epoch_19_params_LR0.0001_WD1e-05.json
processed_data/Centralized_lr0.001_wd0.0001/: model_epoch_0_params_LR0.001_WD0.0001.json  model_epoch_19_params_LR0.001_WD0.0001.json
processed_data/Centralized_lr0.001_wd0.001/: model_epoch_0_params_LR0.001_WD0.001.json  model_epoch_19_params_LR0.001_WD0.001.json
processed_data/Centralized_lr0.001_wd1e-05/: model_epoch_0_params_LR0.001_WD1e-05.json  model_epoch_19_params_LR0.001_WD1e-05.json
processed_data/Centralized_lr0.01_wd0.0001/: model_epoch_0_params_LR0.01_WD0.0001.json  model_epoch_19_params_LR0.01_WD0.0001.json
processed_data/Centralized_lr0.01_wd0.001/: model_epoch_0_params_LR0.01_WD0.001.json  model_epoch_19_params_LR0.01_WD0.001.json
processed_data/Centralized_lr0.01_wd1e-05/: model_epoch_0_params_LR0.01_WD1e-05.json  model_epoch_19_params_LR0.01_WD1e-05.json
processed_data/Centralized_lr0.1_wd0.0001/: model_epoch_0_params_LR0.1_WD0.0001.json  model_epoch_19_params_LR0.1_WD0.0001.json
processed_data/Centralized_lr0.1_wd0.001/: model_epoch_0_params_LR0.1_WD0.001.json  model_epoch_19_params_LR0.1_WD0.001.json
processed_data/Centralized_lr0.1_wd1e-05/: model_epoch_0_params_LR0.1_WD1e-05.json  model_epoch_19_params_LR0.1_WD1e-05.json
processed_data/Federated/: First_baseline_Num_classes_100_local_steps_4  First_baseline_Num_classes_100_local_steps_4.json  First_baseline_Num_classes_100_local_steps_4.pth.json  Skewed_Client_partecipation_Gamma_0.1_Num_classes_100_local_steps_4.json  Uniform_Client_partecipation_Num_classes_100_local_steps_4  Uniform_Client_partecipation_Num_classes_100_local_steps_4.json
processed_data/Federated_BATCH_SIZE_4/: First_baseline_Num_classes_100_local_steps_4  Non_iid_Num_classes_10_local_steps_4  (+11 more)
